Fixed fonts and alignments

--- a/global.css
+++ b/global.css
@@ -2,7 +2,7 @@
   font-family: 'Tobias';
   font-style: normal;
   font-weight: 500;
-  src: url(/fonts/Tobias-Bold.otf) format('opentype');
+  src: url(/fonts/Tobias-Bold.ttf) format('truetype');
 }
 
 body {
